<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_popular"
        android:enabled="true"
        android:icon="@drawable/ic_whatshot_black_24dp"
        android:title="@string/label_popular"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_top_rated"
        android:enabled="true"
        android:icon="@drawable/ic_thumb_up_black_24dp"
        android:title="@string/label_top_rated"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/label_favorites"
        app:showAsAction="ifRoom" />
</menu>