<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.videumcorp.popularmoviesstage2.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:translationZ="@dimen/dimen_4"
        tools:targetApi="lollipop">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:statusBarScrim="@color/colorPrimaryDark">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dimen_minus_25"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/imageViewBackdrop"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/label_movie_backdrop"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="w,16:11"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_96"
                android:layout_gravity="bottom"
                android:contentDescription="@null"
                android:src="@drawable/gradient" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|snap|enterAlways">

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="Name"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    tools:ignore="HardcodedText" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/linearLayoutDetailActivityBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dimen_48"
            android:paddingTop="@dimen/dimen_54">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_16">

                <ImageView
                    android:id="@+id/imageViewPoster"
                    android:layout_width="@dimen/dimen_120"
                    android:layout_height="@dimen/dimen_180"
                    android:contentDescription="@string/label_movie_poster"
                    android:src="@drawable/placeholder"
                    android:transitionName="@string/label_movie_poster"
                    tools:ignore="HardcodedText"
                    tools:targetApi="lollipop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/label_release_date"
                            android:paddingEnd="0dp"
                            android:paddingLeft="@dimen/dimen_24"
                            android:paddingRight="0dp"
                            android:paddingStart="@dimen/dimen_24"
                            app:srcCompat="@drawable/ic_date_range_white_24dp" />

                        <TextView
                            android:id="@+id/textViewReleaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:padding="@dimen/dimen_16"
                            android:textColor="@color/md_text_white_87"
                            tools:text="17-11-2016" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/label_origen_language"
                            android:paddingEnd="0dp"
                            android:paddingLeft="@dimen/dimen_24"
                            android:paddingRight="0dp"
                            android:paddingStart="@dimen/dimen_24"
                            app:srcCompat="@drawable/ic_language_white_24dp" />

                        <TextView
                            android:id="@+id/textViewOriginalLanguage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:padding="@dimen/dimen_16"
                            android:textColor="@color/md_text_white_87"
                            tools:text="English" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/label_favorites"
                            android:paddingEnd="0dp"
                            android:paddingLeft="@dimen/dimen_24"
                            android:paddingRight="0dp"
                            android:paddingStart="@dimen/dimen_24"
                            app:srcCompat="@drawable/ic_favorite_white_24dp" />


                        <TextView
                            android:id="@+id/textViewVote"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:baselineAligned="false"
                            android:gravity="center_vertical"
                            android:padding="@dimen/dimen_16"
                            android:textColor="@color/md_text_white_87"
                            tools:text="5.4/10\n6034 votes" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginRight="@dimen/dimen_16"
                android:background="@color/md_secondary_text_icons_white" />

            <TextView
                style="@style/TextAppearance.AppCompat.Title.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/dimen_16"
                android:paddingLeft="@dimen/dimen_16"
                android:paddingRight="@dimen/dimen_16"
                android:paddingStart="@dimen/dimen_16"
                android:paddingTop="@dimen/dimen_24"
                android:text="@string/overview_label"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewOverview"
                style="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_16"
                android:textColor="@color/md_text_white_87"
                tools:text="Overview" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginRight="@dimen/dimen_16"
                android:background="@color/md_secondary_text_icons_white" />

            <TextView
                style="@style/TextAppearance.AppCompat.Title.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/dimen_16"
                android:paddingLeft="@dimen/dimen_16"
                android:paddingRight="@dimen/dimen_16"
                android:paddingStart="@dimen/dimen_16"
                android:paddingTop="@dimen/dimen_24"
                android:text="@string/trailers_label"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewVideos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_16"
                android:background="@android:color/transparent"
                android:isScrollContainer="true"
                android:nestedScrollingEnabled="false"
                android:numColumns="auto_fit"
                android:scrollbarSize="@dimen/dimen_7"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbarThumbVertical="@drawable/scrollbar"
                android:scrollbars="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/video_item"
                tools:targetApi="lollipop" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/lineLayoutReviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@android:color/white"
        android:elevation="@dimen/dimen_4"
        android:gravity="center"
        android:orientation="vertical"
        android:translationZ="@dimen/dimen_minus_1"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:targetApi="lollipop">

        <LinearLayout
            android:id="@+id/lineLayoutReviewsChild"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_54"
            android:animateLayoutChanges="true"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimen_8"
            android:paddingTop="@dimen/dimen_8"
            android:theme="@style/LayoutStyleControlHighlightRed"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:id="@+id/imageViewChevronReviews1"
                android:layout_width="@dimen/dimen_24"
                android:layout_height="@dimen/dimen_24"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dimen_8"
                android:layout_marginStart="@dimen/dimen_8"
                android:contentDescription="@null"
                android:tint="@color/md_text"
                app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp" />

            <TextView
                android:id="@+id/textViewReviewLabel"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dimen_8"
                android:layout_marginStart="@dimen/dimen_8"
                android:gravity="center"
                android:maxLines="1"
                android:paddingLeft="@dimen/dimen_8"
                android:paddingRight="@dimen/dimen_8"
                android:text="@string/label_reviews"
                android:textColor="@color/md_text"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/imageViewChevronReviews2"
                android:layout_width="@dimen/dimen_24"
                android:layout_height="@dimen/dimen_24"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dimen_8"
                android:layout_marginStart="@dimen/dimen_8"
                android:contentDescription="@null"
                android:tint="@color/md_text"
                app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lineLayoutReviewsChild2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:animateLayoutChanges="true"
            android:background="@android:color/white"
            android:clickable="true"
            android:clipToPadding="false"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:clipToPadding="false"
                android:isScrollContainer="true"
                android:nestedScrollingEnabled="false"
                android:numColumns="auto_fit"
                android:paddingBottom="@dimen/dimen_54"
                android:paddingTop="@dimen/dimen_8"
                android:scrollbarSize="@dimen/dimen_7"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbarThumbVertical="@drawable/scrollbar_black"
                android:scrollbars="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/review_item"
                tools:targetApi="lollipop" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:layout_marginRight="@dimen/dimen_16"
        android:theme="@style/LayoutStyleControlHighlightWhite"
        android:tint="@android:color/white"
        app:elevation="@dimen/dimen_6"
        app:fabSize="normal"
        app:layout_anchor="@id/linearLayoutDetailActivityBackground"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_star_black_24dp" />

</android.support.design.widget.CoordinatorLayout>